# CppTests

./: CMakeLists.txt  main.cpp  main2.cpp
M4aID3EditV2/: Binaural Landscapes - Ozone - 69 Hz.(3089082).m4a  CMakeLists.txt  example.m4a  main.cpp
M4aId3Edit/: CMakeLists.txt  main.cpp
jsonTest/: CMakeLists.txt  main.cpp
jsontest2/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  main2.cpp  main3.cpp
untitled3/: CMakeLists.txt  main.cpp
untitled4/: CMakeLists.txt  main.cpp
